k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: vamshi7923/resume-backend
        ports:
        - containerPort: 8000
